--- a/LABS/LAB0.html
+++ b/LABS/LAB0.html
@@ -51,12 +51,12 @@
                 </p>
 
 <pre class="w3-code w3-light-grey notranslate">
-    <span class="w3-text-grey">// Retorna el n-esimo numero de la serie de Fibonacci - Deben asumir que n >= 0</span>
-    <span class="w3-text-brown">public static</span> <span class="w3-text-green">int</span> fibonacci(<span class="w3-text-green">int</span> n) {
+    <span style='color:#696969; '>// Retorna el n-esimo numero de Fibonacci. Asuman que n >= 0.</span>
+    <span style='color:#800000; font-weight:bold; '>public</span> <span style='color:#800000; font-weight:bold; '>static</span> int fibonacci(int n) <span style='color:#800080; '>{</span>
 
-        <span class="w3-text-grey">// Su Codigo Aqui</span>
+        <span style='color:#696969; '>// Su codigo aqui</span>
 
-    }
+    <span style='color:#800080; '>}</span>
 </pre>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     La serie de Fibonacci está definida por lo siguiente:
@@ -99,12 +99,13 @@
                     La función está dada por el siguiente código:
                 </p>
 <pre class="w3-code w3-light-grey notranslate">
-    <span class="w3-text-grey">// Ustedes asuman que first y second no son null</span>
-    <span class="w3-text-brown">public static</span> <span class="w3-text-green">int[]</span> zipper(<span class="w3-text-green">int[]</span> first, <span class="w3-text-green">int[]</span> second) {
+    <span style='color:#696969; '>// Deben asumir que first y second no son null</span>
+    <span style='color:#800000; font-weight:bold; '>public</span> <span style='color:#800000; font-weight:bold; '>static</span> int[] zipper(int[] first, int[] second) <span style='color:#800080; '>{</span>
 
-        <span class="w3-text-grey">// Su codigo aqui</span>
+    	<span style='color:#696969; '>// Su codigo aqui</span>
 
-    }</pre>
+    <span style='color:#800080; '>}</span>
+</pre>
             </div>
         </div>
         <footer class="w3-container w3-padding-32 w3-theme w3-center">
