--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <title>CC3 - 2016</title>
         <style>
             header {
-                background-image: url("images/header.jpg");
+                background-image: url("images/header1.jpg");
                 color: white;
                 width:100%;
-                min-height:400px;
-                max-height:700px;
+                min-height:250px;
+                max-height:480px;
             }
             .w3-topnav a:first-child:hover{color: #009688;border-bottom: 3px solid transparent;}
         </style>
@@ -28,62 +28,61 @@
               <a href="#horario" title="HORARIO">Horario</a>
         </nav>
         <header id="header" class="w3-container w3-card-4 w3-padding-32">
-            <div class="w3-center w3-padding-32">
-                <h1 class="w3-jumbo">CC3</h1>
-                <h1 class="w3-jumbo w3-animate-bottom">Estructura de Máquinas</h1>
-                <h4 class="w3-xxlarge">2016</h4>
+            <div class="w3-center w3-margin-64 w3-white w3-row w3-round-xlarge" style="opacity:0.95">
+                <div class="w3-half">
+                    <h1 class="w3-text-teal w3-jumbo">CC3</h1>
+                    <h1 class="w3-text-teal w3-jumbo w3-animate-bottom">Estructura de Máquinas</h1>
+                    <h4 class="w3-xxlarge">2016</h4>
+                    <h2 class="w3-xlarge">Catedrático: Ali Lemus</h2>
+                </div>
+                 <div class="w3-half">
+                        <img src="images/P&H.jpg" height="350" class="w3-round-medium"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/K&R.jpg" height="350" class="w3-round-medium"/>
+                </div>
             </div>
         </header>
         <div class="w3-container w3-margin-16">
             <h1 id="noticias" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Noticias</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
-
+                    <ul class="w3-ul w3-striped w3-large">
+                        <li>Inicio de clases general Martes 19 de Enero</li>
+                        <li>Primer clase de CC3</li>
+                        <ul>
+                            <li>Para los de la A, Martes 19 de Enero de 07:00 A 08:39</li>
+                            <li>Para los de la B, Martes 19 de Enero de 09:10 A 10:49</li>
+                            <li>Para los de la C, Miércoles 20 de Enero de 11:20 A 12:09</li>
+                        </ul>
+                    </ul>
                 </p>
-            </div>
-            <h1 id="libros" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Libros</h1>
-            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
-                <div class="w3-row-padding w3-center w3-margin-top">
-                    <div class="w3-half">
-                      <div class="w3-padding-top" style="min-height:460px">
-                      <a href="javascript:void(0)"><img src="images/P&H.jpg" alt="P&H" /></a>
-                      </div>
-                    </div>
-                    <div class="w3-half">
-                      <div class="w3-padding-top" style="min-height:460px">
-                      <a href="javascript:void(0)"><img src="images/K&R.jpg" alt="K&R" /></a>
-                      </div>
-                    </div>
-                </div>
             </div>
             <h1 id="laboratorios" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Laboratorios</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16 w3-center">
-                    <a href="LABS/LAB0.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 00</span></a>
-                    <a href="LABS/LAB1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 01</span></a>
-                    <a href="LABS/LAB2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 02</span></a>
-                    <a href="LABS/LAB3.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 03</span></a>
-                    <a href="LABS/LAB4.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 04</span></a>
-                    <a href="LABS/LAB5.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 05</span></a>
-                    <a href="LABS/LAB6.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 06</span></a><br>
-                    <a href="LABS/LAB7.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 07</span></a>
-                    <a href="LABS/LAB8.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 08</span></a>
-                    <a href="LABS/LAB9.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 09</span></a>
-                    <a href="LABS/LAB10.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 10</span></a>
-                    <a href="LABS/LAB11.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 11</span></a>
-                    <a href="LABS/LAB12.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 12</span></a>
-                    <a href="LABS/LAB13.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">LAB 13</span></a>
+                    <a href="LABS/LAB0.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 00</span></a>
+                    <a href="LABS/LAB1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 01</span></a>
+                    <a href="LABS/LAB2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 02</span></a>
+                    <a href="LABS/LAB3.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 03</span></a><br>
+                    <a href="LABS/LAB4.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 04</span></a>
+                    <a href="LABS/LAB5.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 05</span></a>
+                    <a href="LABS/LAB6.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 06</span></a><br>
+                    <a href="LABS/LAB7.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 07</span></a>
+                    <a href="LABS/LAB8.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 08</span></a>
+                    <a href="LABS/LAB9.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 09</span></a>
+                    <a href="LABS/LAB10.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 10</span></a><br>
+                    <a href="LABS/LAB11.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 11</span></a>
+                    <a href="LABS/LAB12.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 12</span></a>
+                    <a href="LABS/LAB13.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">LAB 13</span></a>
                 </p>
             </div>
             <h1 id="proyectos" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Proyectos</h1>
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16 w3-center">
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 1-1</span></a>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 1-2</span></a><br>
-                    <a href="PROJECTS/P2PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 2-1</span></a>
-                    <a href="PROJECTS/P2PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 2-2</span></a><br>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 3</span></a>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal">Proyecto 4</span></a>
+                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-1</span></a>
+                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-2</span></a><br>
+                    <a href="PROJECTS/P2PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-1</span></a>
+                    <a href="PROJECTS/P2PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-2</span></a><br>
+                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 3</span></a>
+                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 4</span></a>
                 </p>
             </div>
             <h1 id="horario" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Horario</h1>
