--- a/LABS/LAB9.html
+++ b/LABS/LAB9.html
@@ -37,8 +37,16 @@
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     <ul>
-                        <li class="w3-large">.</li>
-                        <li class="w3-large">.</li>
+                        <li class="w3-large">Ganar experiencia en OpenMP.</li>
+                    </ul>
+                </p>
+            </div>
+            <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Referencias adicionales</h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    <ul class="w3-large">
+                        <li><a href="http://openmp.org/mp-documents/omp-hands-on-SC08.pdf">Hands On Introduction to OpenMP</a></li>
+                        <li><a href="http://openmp.org/wp/resources/#Tutorials">Official OpenMP Tutorial Listing</a></li>
                     </ul>
                 </p>
             </div>
@@ -46,6 +54,116 @@
             <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Descarguen los archivos necesarios para este laboratorio en el siguiente <a href="#" target="_blank"><span class="w3-btn w3-red w3-round w3-medium">link</link></a>
+                </p>
+            </div>
+            <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Introducción a OpenMP</h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    <strong class="w3-xlarge">Basics</strong><br><br>
+                    En este laboratorio vamos a tomar ventaja de los múltiples cores de las computadoras del laboratorio. OpenMP es un framework de programación paralela para C/C++ y Fortran. En los últimos años a ganado mucha atención, especialmente después de que las computadoras traen multiples cores. Es simple y tiene buena performance. En este lab vamos a ver algunas de sus características, pero los links en las referencias adicionales les dan más información y tutoriales de este framework.
+                    <br><br>
+                    Hay muchos tipos de paralelismo y patrones para explotarlos. OpenMP escoge un modelo “nested fork-join”. Por defecto, un programa en OpenMP es un programa normal secuencial, excepto por las regiones que el programador explícitamente declara para que se ejecuten en paralelo. En la región paralela, el framework crea (forks) un set de threads. Estos threads ejecutan la mismas instrucciones, solo en diferentes porciones de los datos. En el final de la región paralela, el framework espera que todos los threads terminen (join) antes de dejar la región paralela y continuar secuencialmente.
+                </p>
+                <div class="w3-image w3-center">
+                    <img class="w3-center" src="../images/forkjoin.jpg" alt="fork_join" />
+                </div>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    OpenMP usa “shared memory”, esto significa que todos los threads pueden acceder a la misma dirección de memoria. La alternativa a esto es “distributed memory”, que es preferido en los clusters donde los datos explícitamente son movidos entre direcciones. Muchos programadores encuentran el shared memory más fácil de programar desde que no se tienen que preocupar de mover sus datos, pero es mas difícil de implementar en hardware en una manera escalable. Más adelante en el lab vamos a declarar memoria local al thread (solo la puede acceder el thread que la creo) para propósitos de performance, pero el framework de provee la flexibilidad de que los threads compartan memoria sin ningún esfuerzo del programador.
+                    <br><br>
+                    <strong class="w3-xlarge">Ejemplo Hello World</strong><br><br>
+                    Para este lab, vamos a utilizar C para seguir ganando experiencia en este lenguaje. OpenMP es un framework con una interfaz en C, y no es algo que sea parte del lenguaje. La mayoría de las características de OpenMP son directivas que se le pasan al compilador. Consideren la siguiente implementación del Hello World (hello.c):
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span style='color:#800000; font-weight:bold; '>int</span> <span style='color:#400000; '>main</span><span style='color:#808030; '>(</span><span style='color:#808030; '>)</span> <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp parallel</span>
+      <span style='color:#800080; '>{</span>
+        <span style='color:#800000; font-weight:bold; '>int</span> thread_ID <span style='color:#808030; '>=</span> omp_get_thread_num<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#800080; '>;</span>
+        <span style='color:#603000; '>printf</span><span style='color:#808030; '>(</span><span style='color:#800000; '>"</span><span style='color:#0000e6; '> hello world </span><span style='color:#007997; '>%d</span><span style='color:#0f69ff; '>\n</span><span style='color:#800000; '>"</span><span style='color:#808030; '>,</span> thread_ID<span style='color:#808030; '>)</span><span style='color:#800080; '>;</span>
+      <span style='color:#800080; '>}</span>
+    <span style='color:#800080; '>}</span>
+</pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Este programa va a tomar el numero de threads por defecto y cada uno de ellos va imprimir “hello world” y también el numero de thread que es. El #pragma le dice al compilador que el resto de lineas es una directiva, y en este caso es omp parallel. Omp declara que es para OpenMP y parallel dice que el siguiente bloque de código (lo que esta dentro de {}) puede ejecutarse en paralelo. Pruebenlo:
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span class="w3-text-teal">$</span> make hello
+    <span class="w3-text-teal">$</span> ./hello
+</pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Noten que los números no están numéricamente ordenados y no salen en el mismo orden si corren hello varias veces. Esto es porque con una región paralela (omp parallel), el programador garantiza que las operaciones se pueden hacer en paralelo, y no hay orden entre los threads. Tampoco ganamos nada si la variable thread_ID es local a cada thread. En general con OpenMP, las variables declaradas afuera de un bloque omp parallel tienen una copia y son compartidas a través de todos los threads, mientras que las variables declaradas dentro de un bloque omp parallel tienen una copia privada para cada thread.
+                </p>
+            </div>
+            <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Ejercicio 1: Suma de Vectores </h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    La suma de vectores es un código inherentemente paralelo, así que lo hace bueno para el primer ejercicio. La función v_add adentro de v_add.c va a retornar el arreglo que es la suma de 2 vectores x, y casilla por casilla. Un primer intento de esto puede verse así:
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span style='color:#800000; font-weight:bold; '>void</span> v_add<span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> x<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> y<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> z<span style='color:#808030; '>)</span> <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp parallel</span>
+      <span style='color:#800080; '>{</span>
+        <span style='color:#800000; font-weight:bold; '>for</span><span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>int</span> i<span style='color:#808030; '>=</span><span style='color:#008c00; '>0</span><span style='color:#800080; '>;</span> i<span style='color:#808030; '>&lt;</span>ARRAY_SIZE<span style='color:#800080; '>;</span> i<span style='color:#808030; '>+</span><span style='color:#808030; '>+</span><span style='color:#808030; '>)</span>
+          z<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>=</span> x<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>+</span> y<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span><span style='color:#800080; '>;</span>
+      <span style='color:#800080; '>}</span>
+    <span style='color:#800080; '>}</span>
+</pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    pueden correr esto (make v_add seguido de ./v_add) y el framework de prueba automáticamente va a tomar el tiempo y va a variar el numero de threads. Van a ver que lo hace bastante mal a medida de que incrementamos el numero de threads. Este problema es que cada thread esta ejecutando todo el codigo con un bloque omp parallel, significando que si tenemos 8 threads, realmente estamos sumando los vectores 8 veces. Para ganar velocidad cuando aumentamos el numero de threads, necesitamos que cada thread haga menos trabajo y diferente,  no la misma cantidad como antes.
+                </p>
+                <div class="w3-image w3-center">
+                    <img class="w3-center" src="../images/decomp.jpg" alt="fork_join" />
+                </div>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Su tarea es modificar v_add para que sea mas rapido. La mejor manera de hacer esto, es decrementar la cantidad de trabajo que hace cada thread. Para guiarlos en este proceso, dos funciones útiles en OpenMP son:
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span style='color:#800000; font-weight:bold; '>int</span> omp_get_num_threads<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#800080; '>;</span>
+    <span style='color:#800000; font-weight:bold; '>int</span> omp_get_thread_num<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#800080; '>;</span>
+</pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    la función omp_get_num_threads() va a retornar cuantos threads hay en un bloque omp parallel, y omp_get_thread_num() va a retornar el ID del thread.
+                    <br><br>
+                    Dividan el trabajo en cada thread a través de dos diferentes métodos (escriban diferente código para cada uno de los métodos):
+                    <ul class="w3-large">
+                        <li>Primero, que cada thread se ocupe de hacer sumas adyacentes: i.e. el Thread 0 va a sumar los elementos en el index 0, Thread 1 va a sumar los elementos en el index 1, etc. Este metodo no va a ser muy eficiente. Se va encontrar con un problema conocido como “false sharing”.</li>
+                        <li>Segundo, si hay N threads, dividan el vector en N pequeños bloques, y hagan que cada thread solo sume ese pequeño bloque como la figura de arriba.</li>
+                    </ul>
+                </p>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Para este ejercicio, les pedimos que manualmente dividan el trabajo a través de los threads. Sin embargo, los diseñadores de OpenMP hicieron una directiva for para automáticamente dividir el trabajo independientemente. Aquí esta la función reescrita utilizando esto. Ustedes NO van a usar esta directiva en su solución para este ejercicio (Ejercicio 1).
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span style='color:#800000; font-weight:bold; '>void</span> v_add<span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> x<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> y<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> z<span style='color:#808030; '>)</span> <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp parallel</span>
+      <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp for</span>
+        <span style='color:#800000; font-weight:bold; '>for</span><span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>int</span> i<span style='color:#808030; '>=</span><span style='color:#008c00; '>0</span><span style='color:#800080; '>;</span> i<span style='color:#808030; '>&lt;</span>ARRAY_SIZE<span style='color:#800080; '>;</span> i<span style='color:#808030; '>+</span><span style='color:#808030; '>+</span><span style='color:#808030; '>)</span>
+          z<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>=</span> x<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>+</span> y<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span><span style='color:#800080; '>;</span>
+      <span style='color:#800080; '>}</span>
+    <span style='color:#800080; '>}</span>
+</pre>
+            </div>
+            <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Ejercicio 2: Producto punto</h1>
+            <div class="w3-card-24 w3-white w3-padding-8 w3-round-large">
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    La siguiente interesante operación es el producto punto entre 2 vectores. Implementar esto no es muy diferente de v_add, pero el reto es como sumar todos los productos en la misma variable (reduction). Todos los threads van a tratar de leer y escribir a la misma dirección simultáneamente. Una solución es usar una “critical section”. El código en una “critical section” puede ser ejecutada un thread a la vez en cualquier tiempo. Así, teniendo una “critical section” naturalmente previene que múltiples threads traten de leer y escribir a los mismos datos. Una implementación burda va a proteger la suma con una “critical section”, como (dotp.c):
+                </p>
+<pre class="w3-code w3-light-grey notranslate">
+    <span style='color:#800000; font-weight:bold; '>void</span> v_add<span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> x<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> y<span style='color:#808030; '>,</span> <span style='color:#800000; font-weight:bold; '>double</span><span style='color:#808030; '>*</span> z<span style='color:#808030; '>)</span> <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp parallel</span>
+      <span style='color:#800080; '>{</span>
+    <span style='color:#004a43; '>&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#004a43; '>#</span><span style='color:#004a43; font-weight:bold; '>pragma</span><span style='color:#bb7977; font-weight:bold; '> omp for</span>
+        <span style='color:#800000; font-weight:bold; '>for</span><span style='color:#808030; '>(</span><span style='color:#800000; font-weight:bold; '>int</span> i<span style='color:#808030; '>=</span><span style='color:#008c00; '>0</span><span style='color:#800080; '>;</span> i<span style='color:#808030; '>&lt;</span>ARRAY_SIZE<span style='color:#800080; '>;</span> i<span style='color:#808030; '>+</span><span style='color:#808030; '>+</span><span style='color:#808030; '>)</span>
+          z<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>=</span> x<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span> <span style='color:#808030; '>+</span> y<span style='color:#808030; '>[</span>i<span style='color:#808030; '>]</span><span style='color:#800080; '>;</span>
+      <span style='color:#800080; '>}</span>
+<span style='color:#800080; '>}</span>
+</pre>
+                <p class="w3-text w3-justify w3-large w3-margin-16">
+                    Prueben el código (make dotp y ./dotp). Noten como la performance va empeorando cuando el numero de threads aumenta. Poniendo todo el trabajo de la reducción en una critical section, hacemos que todo el trabajo se haga un thread a la vez (que no es la idea del paralelismo). Vean si pueden solucionar este problema.
+                    <br><br>
+                    Primero, traten de arreglar el código sin utilizar el keyword Reduction en OpenMP. Hint: traten de reducir el numero de veces que un thread suma a la variable global_sum.
+                    <br><br>
+                    Después cuando les funcione, traten de arreglarlo utilizando el keyword Reduction de OpenMP (busquenlo en google para más información). La perfomance es mejor que en el caso de arreglarlo manualmente? Por qué?
                 </p>
             </div>
         </div>
